[package]
name = "r68k-emu"
version = "0.1.0"
authors = ["Martin Hellspong <martin.hellspong@factor10.com>"]
build = "build.rs"

[dependencies]
r68k-common = { path = "../common" }
clippy = {version = "*", optional = true}
once_cell = "1.18.0"

[build-dependencies]
cc = "1.0.83"

[dev-dependencies]
r68k-tools = { path = "../tools" }
itertools = "0.11.0"
libc = "0.2.2"
quickcheck = "1.0.3"
rand = "0.8.5"

[features]
prefetch = []
cycles = []